fix: add schema version

--- a/extension.toml.liquid
+++ b/extension.toml.liquid
@@ -1,6 +1,7 @@
 id = "{{plugin_id}}"
 name = "{{plugin_name}}"
 version = "0.0.1"
+schema_version = 1
 authors = ["{{authors}}"]
 description = "{{description}}"
 repository = "https://github.com/{{username}}/{{plugin_id}}"
