--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -4,6 +4,7 @@ version = "0.0.1"
 authors = ["{{authors}}"]
 edition = "2021"
 publish = false
+repository = "https://github.com/{{username}}/{{plugin_id}}"
 {% if license == "MIT" -%}
 license = "MIT"
 {% elsif license == "Apache-2.0" -%}
@@ -20,3 +21,22 @@ crate-type = ["cdylib"]
 
 [dependencies]
 zed_extension_api = "0.1"
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.22.1"
+# CI backends to support
+ci = "github"
+# The installers to generate for each app
+installers = ["shell", "homebrew"]
+# A GitHub repo to push Homebrew formulas to
+tap = "{{username}}/homebrew-tap"
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+# Path that installers should place binaries in
+install-path = "CARGO_HOME"
+# Publish jobs to run in CI
+publish-jobs = ["homebrew", "./cliff", "./publish-plugin"]
+# Whether to install an updater program
+install-updater = false
