feat: get github username from prompts

--- a/.github/workflows/cliff.yml.liquid
+++ b/.github/workflows/cliff.yml.liquid
@@ -45,7 +45,7 @@ jobs:
       - uses: huacnlee/zed-extension-action@v1
         with:
           extension-name: {{plugin_id}}
-          push-to: {{username}}/extensions
+          push-to: {{gh_username}}/extensions
         env:
 {%- raw %}
           # the personal access token should have "repo" & "workflow" scopes
