--- a/Readme.md.liquid
+++ b/Readme.md.liquid
@@ -38,7 +38,7 @@ It adds the `/{{slash_command_name}}` command to Zed.
 1. Open Zed
 2. Go to Settings > Extensions
 3. Click on "Install from URL"
-4. Enter the following URL: `https://github.com/{{username}}/{{plugin_id}}`
+4. Enter the following URL: `https://github.com/{{gh_username}}/{{plugin_id}}`
 5. Click "Install"
 
 ## Usage
