--- a/extension.toml.liquid
+++ b/extension.toml.liquid
@@ -4,7 +4,7 @@ version = "0.0.1"
 schema_version = 1
 authors = ["{{authors}}"]
 description = "{{description}}"
-repository = "https://github.com/{{username}}/{{plugin_id}}"
+repository = "https://github.com/{{gh_username}}/{{plugin_id}}"
 
 {% if plugin_type == "Language Server" -%}
 [language_servers.{{lsp_name}}]
